<resources>
    <string name="app_name">Stores</string>
    <string name="description_imgPhoto">Store image</string>
    <string name="description_store_add">Create Store</string>
    <string name="text_btn_save">Save</string>
    <string name="hint_name">Store name\n</string>
    <string name="helper_required">Required</string>
    <string name="hint_phone">Phone\n</string>
    <string name="hint_website">website url</string>
    <string name="options_item_whatsapp">Send Whatsapp</string>
    <string name="description_img_photo">Store Photo</string>
    <string name="hint_photo_url">image url</string>
    <string name="edit_store_title_add">Create Store</string>
    <string name="menu_save">Save</string>
    <string name="edit_store_message_save_success">Store added successfully</string>
    <string name="arg_id" translatable="false">arg_id</string>
    <string name="options_item_call">Call</string>
    <string name="options_item_web">Go to website</string>
    <string name="edit_store_message_update_success">Store updated</string>
    <string name="edit_store_message_valid">Check required fields</string>
    <string name="edit_store_title_edit">Edit Store</string>
    <string name="dialog_title_delete">Delete Store?</string>
    <string name="dialog_delete_positive">Delete</string>
    <string name="dialog_delete_negative">Cancel</string>
    <string name="dialog_options_title">What do you want to do?</string>
    <string name="main_error_no_website">This store does not have a website</string>
    <string name="main_error_no_call">No compatible app found</string>
    <string name="main_error_no_whatsapp">WhatsApp no está instalado</string>
</resources>